updated uni name & deleted unused images

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="#" class="certification-link" data-cert="degree">
 						<h3><i class="fas fa-graduation-cap"></i> Mechatronic Engineering Bachelor (Honours)</h3>
-						<p>University of Technology Sydney</p>
+						<p>Macquarie University</p>
 					</a>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
