fixed cert modal new look

--- a/index.html
+++ b/index.html
@@ -214,12 +214,7 @@
 				<span class="close-modal">&times;</span>
 				<h3 id="cert-title"></h3>
 				<div class="cert-details">
-					<p><strong>Date Issued:</strong> <span id="cert-date"></span></p>
-					<div class="cert-skills">
-						<strong>Skills:</strong>
-						<ul id="cert-skills"></ul>
-					</div>
-					<p id="cert-description"></p>
+					<div id="cert-description"></div>
 					<a id="cert-link" href="#" target="_blank" class="button">View Credential</a>
 				</div>
 			</div>
