--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="#" class="certification-link" data-cert="degree">
-						<h3><i class="fas fa-graduation-cap"></i> Mechatronic Engineering Bachelor (Honours)</h3>
+						<h3><i class="fas fa-graduation-cap"></i> Bachelor of Mechatronic Engineering (Honours)</h3>
 						<p>Macquarie University</p>
 					</a>
 				</article>
