tags for skills section

--- a/index.html
+++ b/index.html
@@ -101,19 +101,58 @@
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
 					<h3><i class="fas fa-code"></i> Programming</h3>
-					<p>Java, Python, C/C++, MATLAB, Algorithms & Data Structures, Object-Oriented Programming, Fullstack Development, Firebase, Vercel.</p>
+					<div class="skills-grid">
+						<span class="skill-tag">Java</span>
+						<span class="skill-tag">Python</span>
+						<span class="skill-tag">C/C++</span>
+						<span class="skill-tag">MATLAB</span>
+						<span class="skill-tag">Fullstack Development</span>
+						<span class="skill-tag">Algorithms & Data Structures</span>
+						<span class="skill-tag">Object-Oriented Programming</span>
+						<span class="skill-tag">Firebase</span>
+						<span class="skill-tag">Vercel</span>
+					</div>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<h3><i class="fas fa-laptop-code"></i> Software</h3>
-					<p>Simulink, GitHub, COMSOL Multiphysics, ABB RobotStudio, ROS, Altium Designer, 2D/3D CAD, LTspice, MPLAB X IDE, Atlassian Jira, Trading & Financial Platforms, AI applications.</p>
+					<div class="skills-grid">
+						<span class="skill-tag">Simulink</span>
+						<span class="skill-tag">GitHub</span>
+						<span class="skill-tag">COMSOL Multiphysics</span>
+						<span class="skill-tag">ABB RobotStudio</span>
+						<span class="skill-tag">ROS</span>
+						<span class="skill-tag">Altium Designer</span>
+						<span class="skill-tag">2D/3D CAD</span>
+						<span class="skill-tag">LTspice</span>
+						<span class="skill-tag">MPLAB X IDE</span>
+						<span class="skill-tag">Atlassian Jira</span>
+						<span class="skill-tag">Trading & Financial Platforms</span>
+						<span class="skill-tag">AI applications</span>
+					</div>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<h3><i class="fas fa-robot"></i> Mechatronics</h3>
-					<p>Arduino, ESP32, Raspberry Pi, Wireless Communications, PLCs, Mechanics & 3D printing, Embedded Systems, Micro-Electromechanical Systems (MEMS), Prototyping, Testing & Validation.</p>
+					<div class="skills-grid">
+						<span class="skill-tag">Arduino</span>
+						<span class="skill-tag">ESP32</span>
+						<span class="skill-tag">Raspberry Pi</span>
+						<span class="skill-tag">Wireless Communications</span>
+						<span class="skill-tag">PLCs</span>
+						<span class="skill-tag">Mechanics & 3D printing</span>
+						<span class="skill-tag">Embedded Systems</span>
+						<span class="skill-tag">Micro-Electromechanical Systems</span>
+						<span class="skill-tag">Prototyping</span>
+						<span class="skill-tag">Testing & Validation</span>
+					</div>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<h3><i class="fas fa-tasks"></i> Project Management</h3>
-					<p>Team Leadership, Systems Engineering, Quality Assurance, Stakeholder Engagement.</p>
+					<div class="skills-grid">
+						<span class="skill-tag">Team Leadership</span>
+						<span class="skill-tag">Systems Engineering</span>
+						<span class="skill-tag">Quality Assurance</span>
+						<span class="skill-tag">Stakeholder Engagement</span>
+					</div>
 				</article>
 			</div>
 		</section>
