--- a/index.html
+++ b/index.html
@@ -229,19 +229,19 @@
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="#" class="certification-link" data-cert="ycombinator">
 						<h3><i class="fas fa-rocket"></i> Startup Work Experience</h3>
-						<p>Y Combinator</p>
+						<p>Y Combinator X Forage</p>
 					</a>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="#" class="certification-link" data-cert="ford">
 						<h3><i class="fas fa-car"></i> Digital Advanced Program</h3>
-						<p>Ford Motor Company</p>
+						<p>Ford Motor Company X Forage</p>
 					</a>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="#" class="certification-link" data-cert="deloitte">
 						<h3><i class="fas fa-laptop-code"></i> Technology Program</h3>
-						<p>Deloitte</p>
+						<p>Deloitte X Forage</p>
 					</a>
 				</article>
 			</div>
