Certs now Experience AND added startmate + placeholder

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<li><a href="#about" class="nav-link">About</a></li>
 			<li><a href="#skills" class="nav-link">Skills</a></li>
 			<li><a href="#projects" class="nav-link">Projects</a></li>
-			<li><a href="#certifications" class="nav-link">Certifications</a></li>
+			<li><a href="#experience" class="nav-link">Experience</a></li>
 			<li><a href="#contact" class="nav-link">Contact</a></li>
 		</ul>
 	</nav>
@@ -43,7 +43,7 @@
 			<li><a href="#about" class="nav-link">About</a></li>
 			<li><a href="#skills" class="nav-link">Skills</a></li>
 			<li><a href="#projects" class="nav-link">Projects</a></li>
-			<li><a href="#certifications" class="nav-link">Certifications</a></li>
+			<li><a href="#experience" class="nav-link">Experience</a></li>
 			<li><a href="#contact" class="nav-link">Contact</a></li>
 		</ul>
 	</nav>
@@ -216,14 +216,20 @@
 			</div>
 		</section>
 
-		<!-- Certifications -->
-		<section id="certifications">
-			<h2>Certifications</h2>
+		<!-- Experience -->
+		<section id="experience">
+			<h2>Experience</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="#" class="certification-link" data-cert="degree">
 						<h3><i class="fas fa-graduation-cap"></i> Bachelor of Mechatronic Engineering (Honours)</h3>
 						<p>Macquarie University</p>
+					</a>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="#" class="certification-link" data-cert="startmate">
+						<h3><i class="fas fa-users"></i> Student Fellowship</h3>
+						<p>Startmate</p>
 					</a>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
@@ -242,6 +248,12 @@
 					<a href="#" class="certification-link" data-cert="deloitte">
 						<h3><i class="fas fa-laptop-code"></i> Technology Program</h3>
 						<p>Deloitte X Forage</p>
+					</a>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="#" class="certification-link" data-cert="future">
+						<h3><i class="fas fa-briefcase"></i> Future Experience</h3>
+						<p>Coming Soon</p>
 					</a>
 				</article>
 			</div>
