--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<li><a href="#about" class="nav-link">About</a></li>
 			<li><a href="#skills" class="nav-link">Skills</a></li>
 			<li><a href="#projects" class="nav-link">Projects</a></li>
-			<li><a href="#experience" class="nav-link">Experience</a></li>
+			<li><a href="#milestones" class="nav-link">Milestones</a></li>
 			<li><a href="#contact" class="nav-link">Contact</a></li>
 		</ul>
 	</nav>
@@ -217,8 +217,8 @@
 		</section>
 
 		<!-- Experience -->
-		<section id="experience">
-			<h2>Experience</h2>
+		<section id="milestones">
+			<h2>Milestones</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="#" class="certification-link" data-cert="degree">
