--- a/index.html
+++ b/index.html
@@ -221,37 +221,37 @@
 			<h2>Milestones</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="#" class="certification-link" data-cert="degree">
+					<a href="javascript:void(0);" class="certification-link" data-cert="degree">
 						<h3><i class="fas fa-graduation-cap"></i> Bachelor of Mechatronic Engineering (Honours)</h3>
 						<p>Macquarie University</p>
 					</a>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="#" class="certification-link" data-cert="startmate">
+					<a href="javascript:void(0);" class="certification-link" data-cert="startmate">
 						<h3><i class="fas fa-users"></i> Student Fellowship</h3>
 						<p>Startmate</p>
 					</a>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="#" class="certification-link" data-cert="ycombinator">
+					<a href="javascript:void(0);" class="certification-link" data-cert="ycombinator">
 						<h3><i class="fas fa-rocket"></i> Startup Work Experience</h3>
 						<p>Y Combinator X Forage</p>
 					</a>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="#" class="certification-link" data-cert="ford">
+					<a href="javascript:void(0);" class="certification-link" data-cert="ford">
 						<h3><i class="fas fa-car"></i> Digital Advanced Program</h3>
 						<p>Ford Motor Company X Forage</p>
 					</a>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="#" class="certification-link" data-cert="deloitte">
+					<a href="javascript:void(0);" class="certification-link" data-cert="deloitte">
 						<h3><i class="fas fa-laptop-code"></i> Technology Program</h3>
 						<p>Deloitte X Forage</p>
 					</a>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="#" class="certification-link" data-cert="future">
+					<a href="javascript:void(0);" class="certification-link" data-cert="future">
 						<h3><i class="fas fa-briefcase"></i> Future Experience</h3>
 						<p>Coming Soon</p>
 					</a>
