--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<li><a href="#about" class="nav-link">About</a></li>
 			<li><a href="#skills" class="nav-link">Skills</a></li>
 			<li><a href="#projects" class="nav-link">Projects</a></li>
-			<li><a href="#experience" class="nav-link">Experience</a></li>
+			<li><a href="#milestones" class="nav-link">Milestones</a></li>
 			<li><a href="#contact" class="nav-link">Contact</a></li>
 		</ul>
 	</nav>
