--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
 			<h2>Featured Projects</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="#" class="image fit thumb project-link" data-project="edge-computing">
-						<img src="images/thumbs/01.jpg" alt="Edge Computing Project" />
+					<a href="javascript:void(0);" class="image fit thumb project-link" data-project="edge-computing">
+						<img src="images/thumbs/01.gif" alt="Edge Computing Project" />
 					</a>
 					<h3>Edge Computing for Autonomous Swarm Robotics</h3>
 					<p>Thesis project focusing on edge computing as a solution for enhanced navigation & collision avoidance strategies for autonomous drone swarms.</p>
