--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
 					</div>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="#" class="image fit thumb project-link" data-project="drone-monitoring">
-						<img src="images/thumbs/02.jpg" alt="Drone Monitoring System" />
+					<a href="javascript:void(0);" class="image fit thumb project-link" data-project="drone-monitoring">
+						<img src="images/thumbs/02.gif" alt="Drone Monitoring System" />
 					</a>
 					<h3>Drone Monitoring System</h3>
 					<p>Developed a wireless GUI for real-time sensor feedback, sensor-fusion and power supply monitoring.</p>
