--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
 					</div>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="#" class="image fit thumb project-link" data-project="ecommerce">
-						<img src="images/thumbs/03.jpg" alt="E-Commerce Automation" />
+					<a href="javascript:void(0);" class="image fit thumb project-link" data-project="ecommerce">
+						<img src="images/thumbs/03.gif" alt="E-Commerce Automation" />
 					</a>
 					<h3>E-Commerce Automation</h3>
 					<p>Built and managed four successful online brands with automated systems and marketing strategies.</p>
@@ -201,8 +201,8 @@
 					</div>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="#" class="image fit thumb project-link" data-project="business-transformation">
-						<img src="images/thumbs/04.jpg" alt="Business Digital Transformation" />
+					<a href="javascript:void(0);" class="image fit thumb project-link" data-project="business-transformation">
+						<img src="images/thumbs/04.gif" alt="Business Digital Transformation" />
 					</a>
 					<h3>Business Digital Transformation</h3>
 					<p>Implemented cloud-based systems for quote & invoice processes at E&E Building Services.</p>
