--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 						<span class="skill-tag">Java</span>
 						<span class="skill-tag">Python</span>
 						<span class="skill-tag">C/C++</span>
+						<span class="skill-tag">Cursor</span>
 						<span class="skill-tag">MATLAB</span>
 						<span class="skill-tag">Fullstack Development</span>
 						<span class="skill-tag">Algorithms & Data Structures</span>
