--- a/index.html
+++ b/index.html
@@ -317,8 +317,26 @@
 		<div class="modal-content">
 			<span class="close-modal">&times;</span>
 			<img id="modal-image" src="" alt="Project Image">
-			<h3 id="modal-title"></h3>
-			<p id="modal-description"></p>
+			<div class="project-header">
+				<h3 id="modal-title"></h3>
+				<div class="project-meta">
+					<span id="project-date"></span>
+				</div>
+			</div>
+			<div class="project-body">
+				<div class="project-overview">
+					<h4><i class="fas fa-info-circle"></i> Overview</h4>
+					<p id="modal-description"></p>
+				</div>
+				<div class="project-details">
+					<h4><i class="fas fa-tasks"></i> Key Features</h4>
+					<ul id="project-features"></ul>
+				</div>
+				<div class="project-tech">
+					<h4><i class="fas fa-code"></i> Technologies Used</h4>
+					<div id="project-technologies" class="skills-grid"></div>
+				</div>
+			</div>
 		</div>
 	</div>
 
