--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>e10</title>
+	<title>eShahbaz</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com https://*.googleapis.com https://formspree.io; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://use.fontawesome.com; font-src 'self' data: https://fonts.gstatic.com https://use.fontawesome.com https://ka-f.fontawesome.com; img-src 'self' data: https://*.google.com; connect-src 'self' https://*.firebaseio.com https://*.cloudfunctions.net https://api.formspree.io https://*.googleapis.com https://firestore.googleapis.com https://ka-f.fontawesome.com;">
